# second_demo_nonboost_asio_client

./: Ask_job_message.cpp  Ask_job_message.h  Auth_Message_handler.cpp  Auth_Message_handler.h  Authentication_Message.cpp  Authentication_Message.h  CMakeLists.txt  Connection.cpp  Connection.h  Message.cpp  Message.h  Message_handler.cpp  Message_handler.h  README.md  main.cpp  verbose_verification.cpp  verbose_verification.h
